Closed Bug 673853 Opened 15 years ago Closed 14 years ago

"ASSERTION: Form control should have a parent" (form inside input, @form attribute)

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: jruderman, Assigned: mounir)

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: Form control should have a parent: 'aChild->GetParent()', file content/html/content/src/nsHTMLFormElement.cpp, line 1102
I believe this assertion is just bogus in the @form world and should be removed....
Assignee: nobody → mounir
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86_64 → All
Attached patch Patch v1Splinter Review
Attachment #607941 - Flags: review?(bzbarsky)
Comment on attachment 607941 [details] [diff] [review] Patch v1 r=me
Attachment #607941 - Flags: review?(bzbarsky) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: