Bug 673853 - Fix "ASSERTION: Form control should have a parent". r=bz